[package]
name = "youtube-url-unwrap"
version = "0.1.0"
authors = ["m.zhuravlev <maks723@yandex.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.80", features = ["derive"] }
Boa = "0.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.70"
web-sys = { version = "0.3.47", features = ["console", "Request", "RequestInit", "RequestMode", "Response"] }
wasm-bindgen-futures = "0.4.20"

[profile.release]
opt-level = "s"
