[package]
name = "youtube-url-unwrap"
version = "0.1.0"
authors = ["m.zhuravlev <maks723@yandex.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
Boa = "0.10.0"
serde_json = "1.0"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.70"
web-sys = { version = "0.3.47", features = ["console", "Request", "RequestInit", "RequestMode", "Response"] }
wasm-bindgen-futures = "0.4.20"

[profile.release]
opt-level = "s"
