[package]
name = "youtube-url-unwrap"
version = "0.2.0"
authors = ["m.zhuravlev <maks723@yandex.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
Boa = "0.11.0"
serde_json = "1.0"
regex = "1"
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "s"
